--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -16,7 +16,7 @@
 
 	"page_action_title_failed":
 	{
-		"message": "Google Reader not available"
+		"message": "Google Reader is not available"
 	},
 	
 	"popup_connecting": 
